# diary-app

./: .gitignore  .pr_agent.toml  README.md  biome.json  lefthook.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  backend.yml
.github/workflows/: backend.yml  deploy.yml  lint.yml  node-lint.yml  node-test.yml  pr-agent.yml  python-lint.yml  python-test.yml  test.yml
docs/: api.yaml  apis.md  arch.drawio
src/UNKNOWN.egg-info/: SOURCES.txt
src/backend/: .eslintrc.yml  .gitignore  .prettierrc  cdk.json  package-lock.json  package.json  tsconfig.json
src/backend/lambda/: diary_create.py  diary_delete.py  diary_edit.py  diary_generate_title_create.py  diary_read.py  flower_get.py  requirements.txt  title_get.py
src/backend/lambda/bouquet_create/: bouquet_create.py  requirements.txt
src/backend/lambda/bouquet_get/: bouquet_get.py
src/backend/lambda/can_create_bouquet/: can_create_bouquet.py
src/backend/lambda/check_create_bouquet/: check_create_bouquet.py
src/backend/lambda/diary_create/: diary_create.py
src/backend/lib/: backend-stack.ts
src/backend/test/: backend.test.ts  snapshot.test.ts
src/frontend/: .env  .eslintrc.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/diary-app/: package-lock.json  package.json
src/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
src/frontend/src/lib/: api.ts  (+2 more)
(+193 files in other folders)
